@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,30 +18,30 @@
  */
 package org.apache.pulsar.broker.authorization;
 
+import static java.util.concurrent.TimeUnit.SECONDS;
+import java.util.Set;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutionException;
+import javax.ws.rs.core.Response;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.pulsar.broker.PulsarServerException;
 import org.apache.pulsar.broker.ServiceConfiguration;
-import org.apache.pulsar.broker.authentication.AuthenticationDataCommand;
-import org.apache.pulsar.broker.authentication.AuthenticationDataHttps;
 import org.apache.pulsar.broker.authentication.AuthenticationDataSource;
-import org.apache.pulsar.broker.cache.ConfigurationCacheService;
+import org.apache.pulsar.broker.resources.PulsarResources;
 import org.apache.pulsar.common.naming.NamespaceName;
 import org.apache.pulsar.common.naming.TopicName;
 import org.apache.pulsar.common.policies.data.AuthAction;
+import org.apache.pulsar.common.policies.data.NamespaceOperation;
 import org.apache.pulsar.common.policies.data.PolicyName;
 import org.apache.pulsar.common.policies.data.PolicyOperation;
 import org.apache.pulsar.common.policies.data.TenantInfo;
-import org.apache.pulsar.common.policies.data.NamespaceOperation;
 import org.apache.pulsar.common.policies.data.TenantOperation;
 import org.apache.pulsar.common.policies.data.TopicOperation;
 import org.apache.pulsar.common.util.FutureUtil;
+import org.apache.pulsar.common.util.RestException;
+import org.apache.pulsar.metadata.api.MetadataStoreException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import java.util.Set;
-import java.util.concurrent.CompletableFuture;
-
-import static java.util.concurrent.TimeUnit.SECONDS;
 
 /**
  * Authorization service that manages pluggable authorization provider and authorize requests accordingly.
@@ -50,17 +50,18 @@ import static java.util.concurrent.TimeUnit.SECONDS;
 public class AuthorizationService {
     private static final Logger log = LoggerFactory.getLogger(AuthorizationService.class);
 
-    private AuthorizationProvider provider;
+    private final AuthorizationProvider provider;
     private final ServiceConfiguration conf;
 
-    public AuthorizationService(ServiceConfiguration conf, ConfigurationCacheService configCache)
+    public AuthorizationService(ServiceConfiguration conf, PulsarResources pulsarResources)
             throws PulsarServerException {
         this.conf = conf;
         try {
             final String providerClassname = conf.getAuthorizationProvider();
             if (StringUtils.isNotBlank(providerClassname)) {
-                provider = (AuthorizationProvider) Class.forName(providerClassname).newInstance();
-                provider.initialize(conf, configCache);
+                provider = (AuthorizationProvider) Class.forName(providerClassname)
+                        .getDeclaredConstructor().newInstance();
+                provider.initialize(conf, pulsarResources);
                 log.info("{} has been loaded.", providerClassname);
             } else {
                 throw new PulsarServerException("No authorization providers are present.");
@@ -73,46 +74,36 @@ public class AuthorizationService {
     }
 
     public CompletableFuture<Boolean> isSuperUser(String user, AuthenticationDataSource authenticationData) {
-        if (provider != null) {
-            return provider.isSuperUser(user, authenticationData, conf);
-        }
-        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured"));
+        return provider.isSuperUser(user, authenticationData, conf);
     }
 
     public CompletableFuture<Boolean> isTenantAdmin(String tenant, String role, TenantInfo tenantInfo,
                                                     AuthenticationDataSource authenticationData) {
-        if (provider != null) {
-            return provider.isTenantAdmin(tenant, role, tenantInfo, authenticationData);
-        }
-        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured"));
+        return provider.isTenantAdmin(tenant, role, tenantInfo, authenticationData);
     }
 
     /**
      *
-     * Grant authorization-action permission on a namespace to the given client
+     * Grant authorization-action permission on a namespace to the given client.
+     *
+     * NOTE: used to complete with {@link IllegalArgumentException} when namespace not found or with
+     * {@link IllegalStateException} when failed to grant permission.
      *
      * @param namespace
      * @param actions
      * @param role
      * @param authDataJson
      *            additional authdata in json for targeted authorization provider
-     * @return
-     * @throws IllegalArgumentException
-     *             when namespace not found
-     * @throws IllegalStateException
-     *             when failed to grant permission
+     * @completesWith null when the permissions are updated successfully.
+     * @completesWith {@link MetadataStoreException} when the MetadataStore is not updated.
      */
     public CompletableFuture<Void> grantPermissionAsync(NamespaceName namespace, Set<AuthAction> actions, String role,
-            String authDataJson) {
-
-        if (provider != null) {
-            return provider.grantPermissionAsync(namespace, actions, role, authDataJson);
-        }
-        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured"));
+                                                        String authDataJson) {
+        return provider.grantPermissionAsync(namespace, actions, role, authDataJson);
     }
 
     /**
-     * Grant permission to roles that can access subscription-admin api
+     * Grant permission to roles that can access subscription-admin api.
      *
      * @param namespace
      * @param subscriptionName
@@ -122,16 +113,12 @@ public class AuthorizationService {
      * @return
      */
     public CompletableFuture<Void> grantSubscriptionPermissionAsync(NamespaceName namespace, String subscriptionName,
-            Set<String> roles, String authDataJson) {
-
-        if (provider != null) {
-            return provider.grantSubscriptionPermissionAsync(namespace, subscriptionName, roles, authDataJson);
-        }
-        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured"));
+                                                                    Set<String> roles, String authDataJson) {
+        return provider.grantSubscriptionPermissionAsync(namespace, subscriptionName, roles, authDataJson);
     }
 
     /**
-     * Revoke subscription admin-api access for a role
+     * Revoke subscription admin-api access for a role.
      *
      * @param namespace
      * @param subscriptionName
@@ -139,32 +126,26 @@ public class AuthorizationService {
      * @return
      */
     public CompletableFuture<Void> revokeSubscriptionPermissionAsync(NamespaceName namespace, String subscriptionName,
-            String role, String authDataJson) {
-        if (provider != null) {
-            return provider.revokeSubscriptionPermissionAsync(namespace, subscriptionName, role, authDataJson);
-        }
-        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured"));
+                                                                     String role, String authDataJson) {
+        return provider.revokeSubscriptionPermissionAsync(namespace, subscriptionName, role, authDataJson);
     }
 
     /**
-     * Grant authorization-action permission on a topic to the given client
+     * Grant authorization-action permission on a topic to the given client.
+     *
+     * NOTE: used to complete with {@link IllegalArgumentException} when namespace not found or with
+     * {@link IllegalStateException} when failed to grant permission.
      *
      * @param topicname
      * @param role
      * @param authDataJson
      *            additional authdata in json for targeted authorization provider
-     * @return IllegalArgumentException when namespace not found
-     * @throws IllegalStateException
-     *             when failed to grant permission
+     * @completesWith null when the permissions are updated successfully.
+     * @completesWith {@link MetadataStoreException} when the MetadataStore is not updated.
      */
     public CompletableFuture<Void> grantPermissionAsync(TopicName topicname, Set<AuthAction> actions, String role,
-            String authDataJson) {
-
-        if (provider != null) {
-            return provider.grantPermissionAsync(topicname, actions, role, authDataJson);
-        }
-        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured"));
-
+                                                        String authDataJson) {
+        return provider.grantPermissionAsync(topicname, actions, role, authDataJson);
     }
 
     /**
@@ -176,21 +157,18 @@ public class AuthorizationService {
      *            the app id used to send messages to the topic.
      */
     public CompletableFuture<Boolean> canProduceAsync(TopicName topicName, String role,
-            AuthenticationDataSource authenticationData) {
+                                                      AuthenticationDataSource authenticationData) {
 
         if (!this.conf.isAuthorizationEnabled()) {
             return CompletableFuture.completedFuture(true);
         }
-        if (provider != null) {
-            return provider.isSuperUser(role, authenticationData, conf).thenComposeAsync(isSuperUser -> {
-                if (isSuperUser) {
-                    return CompletableFuture.completedFuture(true);
-                } else {
-                    return provider.canProduceAsync(topicName, role, authenticationData);
-                }
-            });
-        }
-        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured"));
+        return provider.isSuperUser(role, authenticationData, conf).thenComposeAsync(isSuperUser -> {
+            if (isSuperUser) {
+                return CompletableFuture.completedFuture(true);
+            } else {
+                return provider.canProduceAsync(topicName, role, authenticationData);
+            }
+        });
     }
 
     /**
@@ -204,30 +182,28 @@ public class AuthorizationService {
      *            the subscription name defined by the client
      */
     public CompletableFuture<Boolean> canConsumeAsync(TopicName topicName, String role,
-            AuthenticationDataSource authenticationData, String subscription) {
+                                                      AuthenticationDataSource authenticationData,
+                                                      String subscription) {
         if (!this.conf.isAuthorizationEnabled()) {
             return CompletableFuture.completedFuture(true);
         }
-        if (provider != null) {
-            return provider.isSuperUser(role, authenticationData, conf).thenComposeAsync(isSuperUser -> {
-                if (isSuperUser) {
-                    return CompletableFuture.completedFuture(true);
-                } else {
-                    return provider.canConsumeAsync(topicName, role, authenticationData, subscription);
-                }
-            });
-        }
-        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured"));
+        return provider.isSuperUser(role, authenticationData, conf).thenComposeAsync(isSuperUser -> {
+            if (isSuperUser) {
+                return CompletableFuture.completedFuture(true);
+            } else {
+                return provider.canConsumeAsync(topicName, role, authenticationData, subscription);
+            }
+        });
     }
 
     public boolean canProduce(TopicName topicName, String role, AuthenticationDataSource authenticationData)
             throws Exception {
         try {
-            return canProduceAsync(topicName, role, authenticationData).get(conf.getZooKeeperOperationTimeoutSeconds(),
-                    SECONDS);
+            return canProduceAsync(topicName, role, authenticationData).get(
+                    conf.getMetadataStoreOperationTimeoutSeconds(), SECONDS);
         } catch (InterruptedException e) {
-            log.warn("Time-out {} sec while checking authorization on {} ", conf.getZooKeeperOperationTimeoutSeconds(),
-                    topicName);
+            log.warn("Time-out {} sec while checking authorization on {} ",
+                    conf.getMetadataStoreOperationTimeoutSeconds(), topicName);
             throw e;
         } catch (Exception e) {
             log.warn("Producer-client  with Role - {} failed to get permissions for topic - {}. {}", role, topicName,
@@ -237,13 +213,13 @@ public class AuthorizationService {
     }
 
     public boolean canConsume(TopicName topicName, String role, AuthenticationDataSource authenticationData,
-            String subscription) throws Exception {
+                              String subscription) throws Exception {
         try {
             return canConsumeAsync(topicName, role, authenticationData, subscription)
-                    .get(conf.getZooKeeperOperationTimeoutSeconds(), SECONDS);
+                    .get(conf.getMetadataStoreOperationTimeoutSeconds(), SECONDS);
         } catch (InterruptedException e) {
-            log.warn("Time-out {} sec while checking authorization on {} ", conf.getZooKeeperOperationTimeoutSeconds(),
-                    topicName);
+            log.warn("Time-out {} sec while checking authorization on {} ",
+                    conf.getMetadataStoreOperationTimeoutSeconds(), topicName);
             throw e;
         } catch (Exception e) {
             log.warn("Consumer-client  with Role - {} failed to get permissions for topic - {}. {}", role, topicName,
@@ -264,8 +240,18 @@ public class AuthorizationService {
      */
     public boolean canLookup(TopicName topicName, String role, AuthenticationDataSource authenticationData)
             throws Exception {
-        return canProduce(topicName, role, authenticationData)
-                || canConsume(topicName, role, authenticationData, null);
+        try {
+            return canLookupAsync(topicName, role, authenticationData)
+                    .get(conf.getMetadataStoreOperationTimeoutSeconds(), SECONDS);
+        } catch (InterruptedException e) {
+            log.warn("Time-out {} sec while checking authorization on {} ",
+                    conf.getMetadataStoreOperationTimeoutSeconds(), topicName);
+            throw e;
+        } catch (Exception e) {
+            log.warn("Role - {} failed to get lookup permissions for topic - {}. {}", role, topicName,
+                    e.getMessage());
+            throw e;
+        }
     }
 
     /**
@@ -279,95 +265,115 @@ public class AuthorizationService {
      * @throws Exception
      */
     public CompletableFuture<Boolean> canLookupAsync(TopicName topicName, String role,
-            AuthenticationDataSource authenticationData) {
-        CompletableFuture<Boolean> finalResult = new CompletableFuture<Boolean>();
-        canProduceAsync(topicName, role, authenticationData).whenComplete((produceAuthorized, ex) -> {
-            if (ex == null) {
-                if (produceAuthorized) {
-                    finalResult.complete(produceAuthorized);
-                    return;
-                }
+                                                     AuthenticationDataSource authenticationData) {
+        if (!this.conf.isAuthorizationEnabled()) {
+            return CompletableFuture.completedFuture(true);
+        }
+        return provider.isSuperUser(role, authenticationData, conf).thenComposeAsync(isSuperUser -> {
+            if (isSuperUser) {
+                return CompletableFuture.completedFuture(true);
             } else {
-                if (log.isDebugEnabled()) {
-                    log.debug(
-                            "Topic [{}] Role [{}] exception occured while trying to check Produce permissions. {}",
-                            topicName.toString(), role, ex.getMessage());
-                }
+                return provider.canLookupAsync(topicName, role, authenticationData);
             }
-            canConsumeAsync(topicName, role, null, null).whenComplete((consumeAuthorized, e) -> {
-                if (e == null) {
-                    if (consumeAuthorized) {
-                        finalResult.complete(consumeAuthorized);
-                        return;
-                    }
-                } else {
-                    if (log.isDebugEnabled()) {
-                        log.debug(
-                                "Topic [{}] Role [{}] exception occured while trying to check Consume permissions. {}",
-                                topicName.toString(), role, e.getMessage());
-
-                    }
-                    finalResult.completeExceptionally(e);
-                    return;
-                }
-                finalResult.complete(false);
-            });
         });
-        return finalResult;
     }
 
     public CompletableFuture<Boolean> allowFunctionOpsAsync(NamespaceName namespaceName, String role,
-                                                       AuthenticationDataSource authenticationData) {
+                                                            AuthenticationDataSource authenticationData) {
         return provider.allowFunctionOpsAsync(namespaceName, role, authenticationData);
     }
 
+    public CompletableFuture<Boolean> allowSourceOpsAsync(NamespaceName namespaceName, String role,
+                                                          AuthenticationDataSource authenticationData) {
+        return provider.allowSourceOpsAsync(namespaceName, role, authenticationData);
+    }
+
+    public CompletableFuture<Boolean> allowSinkOpsAsync(NamespaceName namespaceName, String role,
+                                                        AuthenticationDataSource authenticationData) {
+        return provider.allowSinkOpsAsync(namespaceName, role, authenticationData);
+    }
+
+    private static void validateOriginalPrincipal(Set<String> proxyRoles, String authenticatedPrincipal,
+                                                  String originalPrincipal) {
+        if (proxyRoles.contains(authenticatedPrincipal)) {
+            // Request has come from a proxy
+            if (StringUtils.isBlank(originalPrincipal)) {
+                log.warn("Original principal empty in request authenticated as {}", authenticatedPrincipal);
+                throw new RestException(Response.Status.UNAUTHORIZED, "Original principal cannot be empty if the "
+                        + "request is via proxy.");
+            }
+            if (proxyRoles.contains(originalPrincipal)) {
+                log.warn("Original principal {} cannot be a proxy role ({})", originalPrincipal, proxyRoles);
+                throw new RestException(Response.Status.UNAUTHORIZED, "Original principal cannot be a proxy role");
+            }
+        }
+    }
+
+    private boolean isProxyRole(String role) {
+        return role != null && conf.getProxyRoles().contains(role);
+    }
+
     /**
-     * Grant authorization-action permission on a tenant to the given client
+     * Grant authorization-action permission on a tenant to the given client.
      *
-     * @param tenantName
-     * @param operation
-     * @param originalRole
-     * @param role
+     * @param tenantName tenant name
+     * @param operation tenant operation
+     * @param role role name
      * @param authData
      *            additional authdata in json for targeted authorization provider
      * @return IllegalArgumentException when tenant not found
      * @throws IllegalStateException
      *             when failed to grant permission
      */
-    public CompletableFuture<Boolean> allowTenantOperationAsync(String tenantName, TenantOperation operation,
-                                                                 String originalRole, String role,
-                                                                 AuthenticationDataSource authData) {
+    public CompletableFuture<Boolean> allowTenantOperationAsync(String tenantName,
+                                                                TenantOperation operation,
+                                                                String role,
+                                                                AuthenticationDataSource authData) {
         if (!this.conf.isAuthorizationEnabled()) {
             return CompletableFuture.completedFuture(true);
         }
-
-        if (provider != null) {
-            return provider.allowTenantOperationAsync(tenantName, originalRole, role, operation, authData);
-        }
-
-        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured for " +
-                "allowTenantOperationAsync"));
+        return provider.allowTenantOperationAsync(tenantName, role, operation, authData);
     }
 
-    public Boolean allowTenantOperation(String tenantName, TenantOperation operation, String orignalRole, String role,
-                                        AuthenticationDataSource authData) {
-        if (!this.conf.isAuthorizationEnabled()) {
-            return true;
+    public CompletableFuture<Boolean> allowTenantOperationAsync(String tenantName,
+                                                                TenantOperation operation,
+                                                                String originalRole,
+                                                                String role,
+                                                                AuthenticationDataSource authData) {
+        validateOriginalPrincipal(conf.getProxyRoles(), role, originalRole);
+        if (isProxyRole(role)) {
+            CompletableFuture<Boolean> isRoleAuthorizedFuture = allowTenantOperationAsync(
+                    tenantName, operation, role, authData);
+            CompletableFuture<Boolean> isOriginalAuthorizedFuture = allowTenantOperationAsync(
+                    tenantName, operation, originalRole, authData);
+            return isRoleAuthorizedFuture.thenCombine(isOriginalAuthorizedFuture,
+                    (isRoleAuthorized, isOriginalAuthorized) -> isRoleAuthorized && isOriginalAuthorized);
+        } else {
+            return allowTenantOperationAsync(tenantName, operation, role, authData);
         }
+    }
 
-        if (provider != null) {
-            return provider.allowTenantOperation(tenantName, orignalRole, role, operation, authData);
+    public boolean allowTenantOperation(String tenantName,
+                                        TenantOperation operation,
+                                        String originalRole,
+                                        String role,
+                                        AuthenticationDataSource authData) throws Exception {
+        try {
+            return allowTenantOperationAsync(
+                    tenantName, operation, originalRole, role, authData).get(
+                            conf.getMetadataStoreOperationTimeoutSeconds(), SECONDS);
+        } catch (InterruptedException e) {
+            throw new RestException(e);
+        } catch (ExecutionException e) {
+            throw new RestException(e.getCause());
         }
-
-        throw new IllegalStateException("No authorization provider configured for allowTenantOperation");
     }
 
     /**
-     * Grant authorization-action permission on a namespace to the given client
+     * Grant authorization-action permission on a namespace to the given client.
      *
      * @param namespaceName
      * @param operation
-     * @param originalRole
      * @param role
      * @param authData
      *            additional authdata in json for targeted authorization provider
@@ -377,39 +383,37 @@ public class AuthorizationService {
      */
     public CompletableFuture<Boolean> allowNamespaceOperationAsync(NamespaceName namespaceName,
                                                                    NamespaceOperation operation,
-                                                                   String originalRole, String role,
+                                                                   String role,
                                                                    AuthenticationDataSource authData) {
         if (!this.conf.isAuthorizationEnabled()) {
             return CompletableFuture.completedFuture(true);
         }
-
-        if (provider != null) {
-            return provider.allowNamespaceOperationAsync(namespaceName, originalRole, role, operation, authData);
-        }
-
-        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured for " +
-                "allowNamespaceOperationAsync"));
+        return provider.allowNamespaceOperationAsync(namespaceName, role, operation, authData);
     }
 
-    public Boolean allowNamespaceOperation(NamespaceName namespaceName, NamespaceOperation operation,
-                                           String originalPrincipal, String role, AuthenticationDataSource authData) {
-        if (!this.conf.isAuthorizationEnabled()) {
-            return true;
+    public CompletableFuture<Boolean> allowNamespaceOperationAsync(NamespaceName namespaceName,
+                                                                   NamespaceOperation operation,
+                                                                   String originalRole,
+                                                                   String role,
+                                                                   AuthenticationDataSource authData) {
+        validateOriginalPrincipal(conf.getProxyRoles(), role, originalRole);
+        if (isProxyRole(role)) {
+            CompletableFuture<Boolean> isRoleAuthorizedFuture = allowNamespaceOperationAsync(
+                    namespaceName, operation, role, authData);
+            CompletableFuture<Boolean> isOriginalAuthorizedFuture = allowNamespaceOperationAsync(
+                    namespaceName, operation, originalRole, authData);
+            return isRoleAuthorizedFuture.thenCombine(isOriginalAuthorizedFuture,
+                    (isRoleAuthorized, isOriginalAuthorized) -> isRoleAuthorized && isOriginalAuthorized);
+        } else {
+            return allowNamespaceOperationAsync(namespaceName, operation, role, authData);
         }
-
-        if (provider != null) {
-            return provider.allowNamespaceOperation(namespaceName, originalPrincipal, role, operation, authData);
-        }
-
-        throw new IllegalStateException("No authorization provider configured for allowNamespaceOperation");
     }
 
     /**
-     * Grant authorization-action permission on a namespace to the given client
+     * Grant authorization-action permission on a namespace to the given client.
      *
      * @param namespaceName
      * @param operation
-     * @param originalRole
      * @param role
      * @param authData
      *            additional authdata in json for targeted authorization provider
@@ -417,37 +421,117 @@ public class AuthorizationService {
      * @throws IllegalStateException
      *             when failed to grant permission
      */
-    public CompletableFuture<Boolean> allowNamespacePolicyOperationAsync(NamespaceName namespaceName, PolicyName policy,
-                                                                         PolicyOperation operation, String originalRole,
-                                                                         String role, AuthenticationDataSource authData) {
+    public CompletableFuture<Boolean> allowNamespacePolicyOperationAsync(NamespaceName namespaceName,
+                                                                         PolicyName policy,
+                                                                         PolicyOperation operation,
+                                                                         String role,
+                                                                         AuthenticationDataSource authData) {
         if (!this.conf.isAuthorizationEnabled()) {
             return CompletableFuture.completedFuture(true);
         }
-
-        if (provider != null) {
-            return provider.allowNamespacePolicyOperationAsync(namespaceName, policy, operation, originalRole, role, authData);
-        }
-
-        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured for " +
-                "allowNamespacePolicyOperationAsync"));
+        return provider.allowNamespacePolicyOperationAsync(namespaceName, policy, operation, role, authData);
     }
 
-    public Boolean allowNamespacePolicyOperation(NamespaceName namespaceName, PolicyName policy,
-                                                 PolicyOperation operation, String originalPrincipal, String role,
-                                                 AuthenticationDataHttps authData) {
-        if (!this.conf.isAuthorizationEnabled()) {
-            return true;
+    public CompletableFuture<Boolean> allowNamespacePolicyOperationAsync(NamespaceName namespaceName,
+                                                                         PolicyName policy,
+                                                                         PolicyOperation operation,
+                                                                         String originalRole,
+                                                                         String role,
+                                                                         AuthenticationDataSource authData) {
+        validateOriginalPrincipal(conf.getProxyRoles(), role, originalRole);
+        if (isProxyRole(role)) {
+            CompletableFuture<Boolean> isRoleAuthorizedFuture = allowNamespacePolicyOperationAsync(
+                    namespaceName, policy, operation, role, authData);
+            CompletableFuture<Boolean> isOriginalAuthorizedFuture = allowNamespacePolicyOperationAsync(
+                    namespaceName, policy, operation, originalRole, authData);
+            return isRoleAuthorizedFuture.thenCombine(isOriginalAuthorizedFuture,
+                    (isRoleAuthorized, isOriginalAuthorized) -> isRoleAuthorized && isOriginalAuthorized);
+        } else {
+            return allowNamespacePolicyOperationAsync(namespaceName, policy, operation, role, authData);
         }
+    }
 
-        if (provider != null) {
-            return provider.allowNamespacePolicyOperation(namespaceName, policy, operation, originalPrincipal, role, authData);
+    public boolean allowNamespacePolicyOperation(NamespaceName namespaceName,
+                                                 PolicyName policy,
+                                                 PolicyOperation operation,
+                                                 String originalRole,
+                                                 String role,
+                                                 AuthenticationDataSource authData) throws Exception {
+        try {
+            return allowNamespacePolicyOperationAsync(
+                    namespaceName, policy, operation, originalRole, role, authData).get(
+                            conf.getMetadataStoreOperationTimeoutSeconds(), SECONDS);
+        } catch (InterruptedException e) {
+            throw new RestException(e);
+        } catch (ExecutionException e) {
+            throw new RestException(e.getCause());
         }
-
-        throw new IllegalStateException("No authorization provider configured for allowNamespacePolicyOperation");
     }
 
     /**
-     * Grant authorization-action permission on a topic to the given client
+     * Grant authorization-action permission on a topic to the given client.
+     *
+     * @param topicName
+     * @param policy
+     * @param operation
+     * @param role
+     * @param authData additional authdata in json for targeted authorization provider
+     * @throws IllegalStateException when failed to grant permission
+     */
+    public CompletableFuture<Boolean> allowTopicPolicyOperationAsync(TopicName topicName,
+                                                                     PolicyName policy,
+                                                                     PolicyOperation operation,
+                                                                     String role,
+                                                                     AuthenticationDataSource authData) {
+        if (!this.conf.isAuthorizationEnabled()) {
+            return CompletableFuture.completedFuture(true);
+        }
+        return provider.allowTopicPolicyOperationAsync(topicName, role, policy, operation, authData);
+    }
+
+    public CompletableFuture<Boolean> allowTopicPolicyOperationAsync(TopicName topicName,
+                                                                     PolicyName policy,
+                                                                     PolicyOperation operation,
+                                                                     String originalRole,
+                                                                     String role,
+                                                                     AuthenticationDataSource authData) {
+        try {
+            validateOriginalPrincipal(conf.getProxyRoles(), role, originalRole);
+        } catch (RestException e) {
+            return FutureUtil.failedFuture(e);
+        }
+        if (isProxyRole(role)) {
+            CompletableFuture<Boolean> isRoleAuthorizedFuture = allowTopicPolicyOperationAsync(
+                    topicName, policy, operation, role, authData);
+            CompletableFuture<Boolean> isOriginalAuthorizedFuture = allowTopicPolicyOperationAsync(
+                    topicName, policy, operation, originalRole, authData);
+            return isRoleAuthorizedFuture.thenCombine(isOriginalAuthorizedFuture,
+                    (isRoleAuthorized, isOriginalAuthorized) -> isRoleAuthorized && isOriginalAuthorized);
+        } else {
+            return allowTopicPolicyOperationAsync(topicName, policy, operation, role, authData);
+        }
+    }
+
+
+    public Boolean allowTopicPolicyOperation(TopicName topicName,
+                                             PolicyName policy,
+                                             PolicyOperation operation,
+                                             String originalRole,
+                                             String role,
+                                             AuthenticationDataSource authData) throws Exception {
+        try {
+            return allowTopicPolicyOperationAsync(
+                    topicName, policy, operation, originalRole, role, authData).get(
+                            conf.getMetadataStoreOperationTimeoutSeconds(), SECONDS);
+        } catch (InterruptedException e) {
+            throw new RestException(e);
+        } catch (ExecutionException e) {
+            throw new RestException(e.getCause());
+        }
+    }
+
+    /**
+     * Grant authorization-action permission on a topic to the given client.
      *
      * @param topicName
      * @param operation
@@ -458,32 +542,71 @@ public class AuthorizationService {
      * @throws IllegalStateException
      *             when failed to grant permission
      */
-    public CompletableFuture<Boolean> allowTopicOperationAsync(TopicName topicName, TopicOperation operation,
-                                                               String originalRole, String role,
+    public CompletableFuture<Boolean> allowTopicOperationAsync(TopicName topicName,
+                                                               TopicOperation operation,
+                                                               String role,
                                                                AuthenticationDataSource authData) {
+        if (log.isDebugEnabled()) {
+            log.debug("Check if role {} is allowed to execute topic operation {} on topic {}",
+                    role, operation, topicName);
+        }
         if (!this.conf.isAuthorizationEnabled()) {
             return CompletableFuture.completedFuture(true);
         }
 
-        if (provider != null) {
-            return provider.allowTopicOperationAsync(topicName, originalRole, role, operation, authData);
+        CompletableFuture<Boolean> allowFuture =
+                provider.allowTopicOperationAsync(topicName, role, operation, authData);
+        if (log.isDebugEnabled()) {
+            return allowFuture.whenComplete((allowed, exception) -> {
+                if (exception == null) {
+                    if (allowed) {
+                        log.debug("Topic operation {} on topic {} is allowed: role = {}",
+                                operation, topicName, role);
+                    } else {
+                        log.debug("Topic operation {} on topic {} is NOT allowed: role = {}",
+                                operation, topicName, role);
+                    }
+                } else {
+                    log.debug("Failed to check if topic operation {} on topic {} is allowed:"
+                                    + " role = {}",
+                            operation, topicName, role, exception);
+                }
+            });
+        } else {
+            return allowFuture;
         }
-
-        return FutureUtil.failedFuture(new IllegalStateException("No authorization provider configured for " +
-                "allowTopicOperationAsync"));
     }
 
-    public Boolean allowTopicOperation(TopicName topicName, TopicOperation operation,
-                                         String orignalRole, String role,
-                                         AuthenticationDataSource authData) {
-        if (!this.conf.isAuthorizationEnabled()) {
-            return true;
+    public CompletableFuture<Boolean> allowTopicOperationAsync(TopicName topicName,
+                                                               TopicOperation operation,
+                                                               String originalRole,
+                                                               String role,
+                                                               AuthenticationDataSource authData) {
+        validateOriginalPrincipal(conf.getProxyRoles(), role, originalRole);
+        if (isProxyRole(role)) {
+            CompletableFuture<Boolean> isRoleAuthorizedFuture = allowTopicOperationAsync(
+                    topicName, operation, role, authData);
+            CompletableFuture<Boolean> isOriginalAuthorizedFuture = allowTopicOperationAsync(
+                    topicName, operation, originalRole, authData);
+            return isRoleAuthorizedFuture.thenCombine(isOriginalAuthorizedFuture,
+                    (isRoleAuthorized, isOriginalAuthorized) -> isRoleAuthorized && isOriginalAuthorized);
+        } else {
+            return allowTopicOperationAsync(topicName, operation, role, authData);
         }
+    }
 
-        if (provider != null) {
-            return provider.allowTopicOperation(topicName, orignalRole, role, operation, authData);
+    public Boolean allowTopicOperation(TopicName topicName,
+                                       TopicOperation operation,
+                                       String originalRole,
+                                       String role,
+                                       AuthenticationDataSource authData) throws Exception {
+        try {
+            return allowTopicOperationAsync(topicName, operation, originalRole, role, authData).get(
+                    conf.getMetadataStoreOperationTimeoutSeconds(), SECONDS);
+        } catch (InterruptedException e) {
+            throw new RestException(e);
+        } catch (ExecutionException e) {
+            throw new RestException(e.getCause());
         }
-
-        throw new IllegalStateException("No authorization provider configured for allowTopicOperation");
     }
 }
